--- a/src/CustomerEnrollment/CustomerEnrollment.csproj
+++ b/src/CustomerEnrollment/CustomerEnrollment.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="CSharpFunctionalExtensions"/>
+    <PackageReference Include="FluentValidation" />
     <PackageReference Include="Microsoft.AspNetCore.HeaderPropagation"/>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
